# python_labs

./: .coverage  README.md  pyproject.toml
data/lab09/: students.csv
src/data/lab04/: input.txt  report.csv
src/data/lab06/samples/: test.txt
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  README.md
src/lab02/: README.md  arrays.py  col_sums.py  flatten.py  matrix.py  min_max.py  row_sums.py  transpose.py  tuples.py  unique_sorted.py
src/lab03/: README.md  text_stats.py
src/lab03/lib/: text.py
src/lab04/: README.md  io_txt_csv.py  text_report.py
src/lab04/lib/: text.py
src/lab05/: README.md  csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab08/: README.md  main.py  models.py  serialize.py
src/lab09/: README.md  __init__.py  group.py  main.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: io_helper.py  json_csv.py  text.py
tests/: test_json_csv.py  test_text.py
tests/python_labs.egg-info/: PKG-INFO
