[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "python_labs"
description = "Лабораторные работы по програмированию"
dynamic = ["version"]

dependencies = []

[tool.setuptools.packages.find]
where = [
    "tests"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.6"
]



[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.coverage.run]
source = ["python_labs"]
omit = [
    "*/test_*",
    "*/pycache/*",
    "*/lib/init.py*",
    "*/lib/json_csv.py*",
    "*/tests/init.py*",
    "*/src/lib.py*",
     "*/src/init.py*" 
]